# schemashift-openenv

./: README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: environment.py  graders.py  main.py  models.py
app/tasks/: task1.py  task2.py  task3.py
server/: app.py
