[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schemashift"
version = "1.0.0"
description = "OpenEnv-compliant API migration reinforcement learning environment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Anish Shirodkar" }
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.1",
  "openai==1.30.1",
  "python-dotenv==1.0.1",
  "requests==2.32.2",
  "httpx==0.27.0",
  "PyYAML==6.0.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
