[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schemashift"
version = "1.0.0"
description = "OpenEnv-compliant API migration reinforcement learning environment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Anish Shirodkar" }
]
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.12.5",
  "openai==2.30.0",
  "openenv-core==0.2.3",
  "python-dotenv==1.2.2",
  "requests==2.32.2",
  "httpx==0.28.1",
  "PyYAML==6.0.1",
]

[project.scripts]
server = "app.main:run_server"

[tool.setuptools.packages.find]
include = ["app*"]
